<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    android:layout_marginVertical="16dp"
    android:orientation="vertical"
    tools:context=".ui.DetailUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:layout_marginVertical="16dp">

        <ImageView
            android:id="@+id/imageViewUserAvatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:padding="16dp"
            android:layout_marginVertical="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/github"
            android:contentDescription="@string/github_user_photo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/nama_user"/>

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/textViewCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/kantor_pengguna"/>

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lokasi_pengguna"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/repository"/>

            <TextView
                android:id="@+id/textViewRepositoryValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/repository_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/follower"/>

            <TextView
                android:id="@+id/textViewFollowerValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/follower_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/following"/>

            <TextView
                android:id="@+id/textViewFollowingValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/following_value"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:layout_marginVertical="16dp">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/back"/>

    </LinearLayout>

</LinearLayout>